# esp8266_no_sdk_baremetal_cpp

./: .gitignore  README.md  toolchain-xtensa.cmake
examples/cpp_17/: CMakeLists.txt  build.sh  color.h  led.cpp  led.h  light.h  main.cpp  memory.cpp  serial.cpp  serial.h  switch.h  syscalls.cpp  syscalls_gcc8_4.cpp  trigger.h  validation.h
examples/cpp_20/: CMakeLists.txt  color.h  concepts.h  led.cpp  led.h  switch.cpp  switch.h
examples/cpp_23/: CMakeLists.txt  cpp_timer.cpp  cpp_timer.h  led.h  main.cpp  switch.h  validation.h
examples/cpp_baseline/: CMakeLists.txt  led.cpp  main.cpp  serial.cpp  serial.h  switch.cpp
examples/cpp_modules/: CMakeLists.txt  build.sh  color.ixx  concepts.cppm  cpp_timer.h  led.cppm  led.ixx  led_impl.cppm  main.cpp  serial.cppm  serial.ixx  serial_impl.cppm  switch.cppm  switch.ixx  switch_impl.cppm  timer.cppm  timer.ixx  timer_impl.cppm  validation.ixx
src/driver/: timer.c
src/include/driver/: timer.h
src/include/libs/: printf.h
src/libs/: printf.c
